--- a/miniprogram/pages/scanning/index.wxss
+++ b/miniprogram/pages/scanning/index.wxss
@@ -164,3 +164,12 @@ page {
   margin: 0 auto;
   width: 60%;
 }
+
+.inp{
+  margin: 17% 0 10% 0;
+  height: 36px;
+  display: inline-block;
+  font-size: 20px;
+  width: 100%;
+  border-radius: 6px;
+}
